--- a/src/Styles/begin.css
+++ b/src/Styles/begin.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Petemoss&display=swap');
 .table{
     width: 100%;
     height: 250px;
@@ -13,10 +13,7 @@
     position: absolute;
     top: 20%;
     left: 30%;
-    margin: -25px 0 0 -25px;
-    
-
-
+    margin: -25px 0 0 -25px;    
 
 }
 
@@ -26,7 +23,104 @@
    
 }
 
+.welcome{
+    color: #594C33;
+    font-family: Petemoss;
+    font-size: 25px;
+    text-align-last: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     
+}
+.well{
+    
+    position: absolute;
+    left: 50px ;
+    top: 40%;
+    margin: 30px;
+
+}
+
+
+/*here comes the mediaqueries*/
+
+@media only screen and (min-width: 768px) {
+
+
+    .table{
+        width: 100%;
+        height: 200px;
+       
+    }
+    .wood{
+        width: 100%;
+        height: 200px;
+    }
+    
+    .girl{
+        position: absolute;
+        top: 30%;
+        left: 10%;
+        margin: -25px 0 0 -25px;    
+    
+    }
+    
+    .logo{
+        width: 170px;
+        height: 170px;
+       
+    }
+    .welcome{
+        color: #594C33;
+        font-family: Petemoss;
+        font-size: 30px;
+        text-align-last:center;
+       
+        
+    }
+    .well{
+        
+        position: absolute;
+        left: 30%;
+        top: 28%;
+        margin: 30px;
+    
+    }
+
+}
    
+@media only screen and (min-width: 1024px) {
+
+
+    .table{
+        width: 100%;
+        height: 200px;
+       
+    }
+    .wood{
+        width: 100%;
+        height: 200px;
+    }
     
+    .girl{
+        position: absolute;
+        top: 40%;
+        left: 10%;
+        margin: -25px 0 0 -25px;    
+    
+    }
+    
+    .logo{
+        width: 200px;
+        height: 200px;
+       
+    }
+    .welcome{
+        color: #594C33;
+        font-family: Petemoss;
+        width: 80px;
+    }
+
+}    
    
