--- a/src/Styles/begin.css
+++ b/src/Styles/begin.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Petemoss&display=swap');
+
 .table{
     width: 100%;
     height: 250px;
@@ -42,6 +43,27 @@
 
 }
 
+#search{
+   background-color: #F3AEB1;
+   width: 20px;
+   height: 20px;
+   padding: 20px;
+    display: flex;
+    justify-content: center;
+    margin-top: 350px;
+    margin-left: 300px;
+    color: rgb(255, 255, 255);
+}
+
+.searchBox{
+width: 180px;
+height: 50px;
+    display: flex;
+    justify-content: center;
+    margin-top: -57px;
+    margin-left: 110px;
+    
+}
 
 /*here comes the mediaqueries*/
 
@@ -89,6 +111,8 @@
     }
 
 }
+
+/*DESKTOP*/
    
 @media only screen and (min-width: 1024px) {
 
@@ -105,7 +129,7 @@
     
     .girl{
         position: absolute;
-        top: 40%;
+        top: 30%;
         left: 10%;
         margin: -25px 0 0 -25px;    
     
