--- a/src/Styles/begin.css
+++ b/src/Styles/begin.css
@@ -2,12 +2,12 @@
 
 .table{
     width: 100%;
-    height: 250px;
+    height: 220px;
    
 }
 .wood{
     width: 100%;
-    height: 250px;
+    height: 220px;
 }
 
 .girl{
@@ -48,16 +48,18 @@
    width: 20px;
    height: 20px;
    padding: 20px;
+   font-size: 25px;
     display: flex;
     justify-content: center;
     margin-top: 350px;
     margin-left: 300px;
     color: rgb(255, 255, 255);
+    cursor: pointer;
 }
 
 .searchBox{
-width: 180px;
-height: 50px;
+    width: 180px;
+    height: 50px;
     display: flex;
     justify-content: center;
     margin-top: -57px;
@@ -65,56 +67,49 @@ height: 50px;
     
 }
 
+.searchBox-input{
+    display: block;
+    font-size: 220px;
+}
+
+.listBox{
+    position: fixed;
+    top: 650px;
+    left: 110px; 
+
+    width: 210px;
+    background: white;
+    list-style: none;
+    display: none;
+    
+}
+.listBox li a{
+    display: block;
+    width: 210px;
+    color: rgb(39, 39, 39);
+    padding: 12px 20px;
+     
+}
+.listBox li a:hover{
+    color: rgb(255, 162, 255);
+}
+.title{
+    text-align: center;
+    color: rgb(255, 72, 255);
+    margin: 50px;
+}
+.footer{
+    background-color: violet;
+    width: 100%;
+    height: 90px;
+    position:absolute;
+    bottom: 0%;
+   
+}
+
 /*here comes the mediaqueries*/
 
 @media only screen and (min-width: 768px) {
-
-
-    .table{
-        width: 100%;
-        height: 200px;
-       
-    }
-    .wood{
-        width: 100%;
-        height: 200px;
-    }
-    
-    .girl{
-        position: absolute;
-        top: 30%;
-        left: 10%;
-        margin: -25px 0 0 -25px;    
-    
-    }
-    
-    .logo{
-        width: 170px;
-        height: 170px;
-       
-    }
-    .welcome{
-        color: #594C33;
-        font-family: Petemoss;
-        font-size: 30px;
-        text-align-last:center;
-       
-        
-    }
-    .well{
-        
-        position: absolute;
-        left: 30%;
-        top: 28%;
-        margin: 30px;
-    
-    }
-
-}
-
-/*DESKTOP*/
-   
-@media only screen and (min-width: 1024px) {
 
 
     .table{
@@ -143,7 +138,159 @@ height: 50px;
     .welcome{
         color: #594C33;
         font-family: Petemoss;
-        width: 80px;
+        font-size: 30px;
+        text-align-last:center;
+       
+        
+    }
+    .well{
+        
+        position: absolute;
+        left: 30%;
+        top: 28%;
+        margin: 30px;
+    
+    }
+    #search{
+        background-color: #F3AEB1;
+        width: 20px;
+        height: 20px;
+        padding: 20px;
+        font-size: 25px;
+         display: flex;
+         justify-content: flex-end;
+         margin-top: 250px;
+         margin-left: 700px;
+         color: rgb(255, 255, 255);
+         cursor: pointer;
+     }
+     
+     .searchBox{
+         width: 180px;
+         height: 50px;
+         display: flex;
+         justify-content: center;
+         margin-top: -57px;
+         margin-left: 510px;
+        
+     }
+     
+     .searchBox-input{
+         display: block;
+         font-size: 220px;
+     }
+     
+     .listBox{
+         position: fixed;
+         top: 650px;
+         left: 110px; 
+     
+         width: 210px;
+         background: white;
+         list-style: none;
+         display: none;
+         
+     }
+     .listBox li a{
+         display: block;
+         width: 210px;
+         color: rgb(39, 39, 39);
+         padding: 12px 20px;
+          
+     }
+     .listBox li a:hover{
+         color: rgb(255, 162, 255);
+     }
+
+}
+
+/*DESKTOP*/
+   
+@media only screen and (min-width: 1024px) {
+
+
+    .table{
+        width: 100%;
+        height: 200px;
+       
+    }
+    .wood{
+        width: 100%;
+        height: 200px;
+    }
+    
+    .girl{
+        position: absolute;
+        top: 40%;
+        left: 10%;
+        margin: -25px 0 0 -25px;    
+    
+    }
+    
+    .logo{
+        width: 260px;
+        height: 260px;
+       
+    }
+    .welcome{
+        color: #594C33;
+        font-family: Petemoss;
+        font-size: 45px;
+    }
+    #search{
+        background-color: #F3AEB1;
+        width: 20px;
+        height: 20px;
+        padding: 20px;
+        font-size: 25px;
+         display: flex;
+         justify-content: flex-end;
+         margin-top: 250px;
+         margin-left: 1200px;
+         color: rgb(255, 255, 255);
+         cursor: pointer;
+     }
+     
+     .searchBox{
+         width: 180px;
+         height: 50px;
+         display: flex;
+         justify-content: center;
+         margin-top: -57px;
+         margin-left: 1010px;
+        
+     }
+     
+     .searchBox-input{
+         display: block;
+         font-size: 220px;
+     }
+     
+     .listBox{
+         position: fixed;
+         top: 650px;
+         left: 110px; 
+     
+         width: 210px;
+         background: white;
+         list-style: none;
+         display: none;
+         
+     }
+     .listBox li a{
+         display: block;
+         width: 210px;
+         color: rgb(39, 39, 39);
+         padding: 12px 20px;
+          
+     }
+     .listBox li a:hover{
+         color: rgb(255, 162, 255);
+     }
+     .title{
+        text-align: center;
+        color: rgb(255, 72, 255);
+        margin: 110px;
     }
 
 }    
